Fixed somre bugs and added butter knife